--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "gulp-path-alias",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "path alias",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "ava"
+    "test": "ava",
+    "build": "rimraf lib && tsc",
+    "release-major": "npm run build && standard-version --release-as major",
+    "release-minor": "npm run build && standard-version --release-as minor",
+    "release": "npm run build && standard-version --release-as patch"
   },
   "repository": {
     "type": "git",
@@ -34,11 +38,21 @@
     "node": ">=8"
   },
   "files": [
-    "index.js"
+    "lib/index.js",
+    "lib/index.d.ts",
+    "README.md",
+    "LICENSE",
+    "CHANGELOG.md"
   ],
   "devDependencies": {
+    "@types/node": "^14.14.19",
+    "@types/replacestream": "^4.0.0",
+    "@types/through2": "^2.0.36",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
     "ava": "^3.13.0",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "replacestream": "^4.0.3"
