--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-path-alias",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "path alias",
   "main": "lib/index.js",
   "scripts": {
@@ -52,6 +52,7 @@
     "@typescript-eslint/parser": "^4.11.1",
     "ava": "^3.13.0",
     "gulp": "^4.0.2",
+    "standard-version": "^9.1.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
