--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@typescript-eslint/parser": "^4.11.1",
     "ava": "^3.13.0",
     "gulp": "^4.0.2",
+    "rimraf": "^3.0.2",
     "standard-version": "^9.1.0",
     "typescript": "^4.1.3"
   },
