--- a/package.json
+++ b/package.json
@@ -44,6 +44,11 @@
     "LICENSE",
     "CHANGELOG.md"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test"
+    }
+  },
   "devDependencies": {
     "@types/node": "^14.14.19",
     "@types/replacestream": "^4.0.0",
@@ -52,11 +57,13 @@
     "@typescript-eslint/parser": "^4.11.1",
     "ava": "^3.13.0",
     "gulp": "^4.0.2",
+    "husky": "^4.3.7",
     "rimraf": "^3.0.2",
     "standard-version": "^9.1.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "replacestream": "^4.0.3"
+    "replacestream": "^4.0.3",
+    "slash": "^3.0.0"
   }
 }
