feat: 支持类 webpack 全字匹配, 支持 alias 带斜线, 支持替换为相对路径

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "no-console": 0,
     "no-sync": 0,
     "no-continue": 0,
-    "global-require": 0
+    "global-require": 0,
+    "quotes": [2, "single"]
   }
 }
