--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "ava": "^3.13.0",
+    "eslint": "^7.18.0",
     "gulp": "^4.0.2",
     "husky": "^4.3.7",
     "rimraf": "^3.0.2",
